# sec-edgar-filings-chat

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.infra.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
app/: config.py  exceptions.py  main.py  models.py
app/repositories/: filing_metadata_repo.py  pgvector_repo.py  qdrant_hybrid_repo.py  qdrant_repo.py
app/routes/: search.py
app/services/: chunk_search_router.py  conversation_store.py  hybrid_reranker.py  ollama_client.py  ollama_service.py  pg_hybrid_search.py  qdrant_hybrid_search.py  qdrant_info.py  rag_search.py  retrieval_query.py  ticker_resolver.py
app/static/css/: app.css
app/templates/: index.html
docker/: entrypoint.sh
docker/sql/: 001_init.sql
tests/: test_app.py  test_conversation.py  test_qdrant_hybrid.py  test_rag_conversation.py  test_rag_hybrid_routing.py  test_routes.py
